# ASPR_2022-2023

./: README.md
Paquetes/Ficheros importantes/CMakeLists/clase_cmake-step_3/: CMakeLists.txt
Paquetes/Ficheros importantes/CMakeLists/clase_cmake-step_4/: CMakeLists.txt  README.md
Paquetes/Paquetes Tema 1/my_package/: CMakeLists.txt  package.xml
Paquetes/Paquetes Tema 1/my_package/src/: simple.cpp
Prácticas/Práctica 1_ Avoid Obstacle/: .gitignore  CMakeLists.txt  Doxyfile  PROJECT_GUIDELINES.md  README.md  package.xml
Prácticas/Práctica 1_ Avoid Obstacle/.model-al/avoid_obstacle_al/: CMakeLists.txt  package.xml
Prácticas/Práctica 1_ Avoid Obstacle/.model-ji/random_walker/: CMakeLists.txt  package.xml
Prácticas/Práctica 1_ Avoid Obstacle/.model-sa/: CMakeLists.txt  package.xml
Prácticas/Práctica 1_ Avoid Obstacle/.model-sa/src/: model-sa.cpp
Prácticas/Práctica 1_ Avoid Obstacle/doc/html/: AvoidObstacleNode_8cpp.html  AvoidObstacleNode_8cpp__incl.map  AvoidObstacleNode_8cpp__incl.md5  AvoidObstacleNode_8hpp.html  AvoidObstacleNode_8hpp__dep__incl.map  AvoidObstacleNode_8hpp__dep__incl.md5  AvoidObstacleNode_8hpp__incl.map  AvoidObstacleNode_8hpp__incl.md5  AvoidObstacleNode_8hpp_source.html  DebugNode_8cpp.html  DebugNode_8cpp__incl.map  DebugNode_8cpp__incl.md5  DebugNode_8hpp.html  DebugNode_8hpp__dep__incl.map  DebugNode_8hpp__dep__incl.md5  DebugNode_8hpp__incl.map  DebugNode_8hpp__incl.md5  DebugNode_8hpp_source.html  annotated.html  classAvoidObstacleNode-members.html  classAvoidObstacleNode.html  classAvoidObstacleNode__coll__graph.md5  classAvoidObstacleNode__inherit__graph.map  classDebugNode-members.html  classDebugNode.html  classes.html  dir_000003_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_842e87351d34b3300f11b46b36ddb393.html  dir_c3aef4a71ec76c9cf17f0a6795804eff.html  dir_c3aef4a71ec76c9cf17f0a6795804eff_dep.map  dir_c3aef4a71ec76c9cf17f0a6795804eff_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  (+2 more)
Prácticas/Práctica 1_ Avoid Obstacle/doc/led_manual/: led_manual.tex
Prácticas/Práctica 1_ Avoid Obstacle/include/avoid_obstacle_forocoches/: AvoidObstacleNode.hpp  DebugNode.hpp
Prácticas/Práctica 1_ Avoid Obstacle/launch/: avoid_obstacle.launch.py  avoid_obstacle_sim.launch.py
Prácticas/Práctica 1_ Avoid Obstacle/media/: DynamicAreaSlithersThrough.webm
Prácticas/Práctica 1_ Avoid Obstacle/src/: avoid_obstacle_main.cpp
Prácticas/Práctica 1_ Avoid Obstacle/src/avoid_obstacle_forocoches/: AvoidObstacleNode.cpp  DebugNode.cpp
Prácticas/Práctica 2_ Seek And Capture/: CMakeLists.txt  Doxyfile  README.md  package.xml  setup.sh
Prácticas/Práctica 2_ Seek And Capture/.github/workflows/: lint.yml
Prácticas/Práctica 2_ Seek And Capture/behavior_tree_xml/: seek_and_capture.xml
Prácticas/Práctica 2_ Seek And Capture/doc/html/: DebugNode_8cpp.html  DebugNode_8cpp__incl.md5  DebugNode_8hpp__dep__incl.md5  DebugNode_8hpp_source.html  IsPerson_8hpp_source.html  PIDController_8hpp_source.html  annotated.html  classDebugNode-members.html  classDebugNode__coll__graph.md5  classes.html  classseek__and__capture__forocoches_1_1FindPerson-members.html  classseek__and__capture__forocoches_1_1FindPerson.html  classseek__and__capture__forocoches_1_1IsPerson-members.html  classseek__and__capture__forocoches_1_1IsPerson.html  classseek__and__capture__forocoches_1_1Navigation-members.html  classseek__and__capture__forocoches_1_1Navigation__inherit__graph.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_9abe6ce325ef7189acbb1aac66da777a_dep.map  dir_9abe6ce325ef7189acbb1aac66da777a_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fd28fb1d0d8877a4075a34c09200cd09.html  files.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherits.html
Prácticas/Práctica 2_ Seek And Capture/doc/latex/: DebugNode_8cpp.tex  DebugNode_8cpp__incl.md5  DebugNode_8hpp.tex  DebugNode_8hpp__dep__incl.md5  DebugNode_8hpp__incl.md5  annotated.tex  classDebugNode.tex  classDebugNode__inherit__graph.md5  classseek__and__capture__forocoches_1_1FindPerson.tex  classseek__and__capture__forocoches_1_1FindPerson__coll__graph.md5  classseek__and__capture__forocoches_1_1IsPerson.tex  classseek__and__capture__forocoches_1_1IsPerson__inherit__graph.md5  classseek__and__capture__forocoches_1_1Is__on__ground.tex  classseek__and__capture__forocoches_1_1Is__on__ground__coll__graph.md5  classseek__and__capture__forocoches_1_1LowBattery.tex  classseek__and__capture__forocoches_1_1LowBattery__inherit__graph.md5  classseek__and__capture__forocoches_1_1Navigation.tex  classseek__and__capture__forocoches_1_1Navigation__inherit__graph.md5  classseek__and__capture__forocoches_1_1PIDController.tex  files.tex  hierarchy.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
Prácticas/Práctica 2_ Seek And Capture/doc/led_manual/: .project  README.md
Prácticas/Práctica 2_ Seek And Capture/include/seek_and_capture_forocoches/: DebugNode.hpp  FindPerson.hpp  IsPerson.hpp  Navigation.hpp  PIDController.hpp  Turn.hpp
Prácticas/Práctica 2_ Seek And Capture/launch/: seek_and_capture_full.launch.py
Prácticas/Práctica 2_ Seek And Capture/src/: seek_and_capture_main.cpp
Prácticas/Práctica 2_ Seek And Capture/src/seek_and_capture_forocoches/: DebugNode.cpp  FindPerson.cpp  Turn.cpp  (+3 more)
Prácticas/Práctica 3_ Receptionist/: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml  third_parties.repos
Prácticas/Práctica 3_ Receptionist/behavior_tree_xml/: recepcionist.xml
Prácticas/Práctica 3_ Receptionist/config/: params.yaml
Prácticas/Práctica 3_ Receptionist/launch/: dependencies.launch.py  recepcionist_forocoches.launch.py
Prácticas/Práctica 3_ Receptionist/src/: recepcionist_main.cpp
(+145 files in other folders)
