<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>recepcionist_forocoches</name>
  <version>0.2.0</version>
  <description>Find and follow people</description>
  <maintainer email="j.izquierdoh.2021@alumnos.urjc.es">javier</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>kobuki_ros_interfaces</depend>
  <depend>libzmq3-dev</depend>
  <depend>sound_play</depend>
  <depend>dialogflow_ros2_interfaces</depend>
  <exec_depend>gb_dialog</exec_depend>
  <build_depend>gb_dialog</build_depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
