<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>avoid_obstacle_al</name>
  <version>0.2.0</version>
  <description>Bump and Go behavior based on Finite State Machines (C++)</description>
  <maintainer email="a.leon.2020@alumnos.urjc.es">aleon2020</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>kobuki_ros_interfaces</depend>
  <depend>std_msgs</depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>